--- a/views/single-article-view.handlebars
+++ b/views/single-article-view.handlebars
@@ -18,7 +18,7 @@
   </form>
   {{/if}}
 </p>
-<img src="/article_images/{{newsArticle.image}}" alt="Article Image" width="500" height="400">
+<img class="article-image" src="/article_images/{{newsArticle.image}}" alt="Article Image" width="500" height="400">
 <br />
 <br />
 {{{body}}}
