--- a/views/admin-category-form.handlebars
+++ b/views/admin-category-form.handlebars
@@ -1,12 +1,12 @@
 {{> admin/dashboard-navigation }}
 <h2>Add Category</h2>
 <form action="/admin/add-category" method="post">
-	<div class="form_settings">
-		<p><span>Category Title</span><input type="text" name="title" value="" /></p>
+	<div class="form-settings">
+		<p><span>Category Title</span><input type="text" name="title" /></p>
 		<br />
-		<p><span>Description</span><input type="text" name="description" value="" /></p>
+		<p><span>Description</span><input type="text" name="description" /></p>
 		<br />
-		<p style="padding-top: 15px"><span>&nbsp;</span><input class="submit" type="submit" name="name" value="Add Category" /></p>
+		<p class="form-button-padding"><span>&nbsp;</span><input class="submit" type="submit" name="name" value="Add Category" /></p>
 		<br />
 		<br />
 	</div>
