--- a/views/includes/admin/dashboard-navigation.handlebars
+++ b/views/includes/admin/dashboard-navigation.handlebars
@@ -1,4 +1,5 @@
 <a href="/admin/category/add-new">Add new category</a> |
 <a href="/admin/categories">View Categories</a> |
 <a href="/news/add-new">Post news item</a> |
-<a href="/admin/news">View Articles</a>
+<a href="/admin/news">View Articles</a> |
+<a href="/admin/users">View Users</a>
