--- a/views/login-form.handlebars
+++ b/views/login-form.handlebars
@@ -1,10 +1,10 @@
 <h2>Login</h2>
 <form action="/users/login" method="post">
-    <div class="form_settings">
-        <p><span>Email:</span><input type="email" name="email" value="" /></p>
+    <div class="form-settings">
+        <p><span>Email:</span><input type="email" name="email" /></p>
         <br />
-        <p><span>Password:</span><input type="password" name="password" value="" /></p>
+        <p><span>Password:</span><input type="password" name="password" /></p>
         <br />
-        <p style="padding-top: 15px"><span>&nbsp;</span><input class="submit" type="submit" name="name" value="Login" /></p>
+        <p class="form-button-padding"><span>&nbsp;</span><input class="submit" type="submit" name="name" value="Login" /></p>
     </div>
 </form>
