--- a/views/single-article-view.handlebars
+++ b/views/single-article-view.handlebars
@@ -1,24 +1,22 @@
 <h2>{{newsArticle.title}}</h2>
+
 <p>By: <b>{{author}}</b></p>
-<p>
-  {{publishedDate}}
-  {{#if logged_in }}
-  <form method="post" action="/news/article/{{newsArticle.id}}/submit-rating">
-    <ul class="form">
-      <li class="rating">
-        <input type="radio" name="rating" value="0" checked /><span class="hide"></span>
-        <input type="radio" name="rating" value="1" /><span></span>
-        <input type="radio" name="rating" value="2" /><span></span>
-        <input type="radio" name="rating" value="3" /><span></span>
-        <input type="radio" name="rating" value="4" /><span></span>
-        <input type="radio" name="rating" value="5" /><span></span>
-      </li>
-    </ul>
-    <input type="submit" value="Submit rating" />
-  </form>
-  {{/if}}
-</p>
+<p>{{publishedDate}}, average rating: {{newsArticleRatingsAvg}} ({{newsArticleRatingsCount}} ratings)</p>
+
 <img class="article-image" src="/article_images/{{newsArticle.image}}" alt="Article Image" width="500" height="400">
 <br />
 <br />
 {{{body}}}
+
+{{#if logged_in }}
+<form method="post" action="/news/article/{{newsArticle.id}}/submit-rating">
+  <span class="star-rating">
+    <input type="radio" name="rating" value="1" /><i></i>
+    <input type="radio" name="rating" value="2" /><i></i>
+    <input type="radio" name="rating" value="3" /><i></i>
+    <input type="radio" name="rating" value="4" /><i></i>
+    <input type="radio" name="rating" value="5" /><i></i>
+  </span>
+  <input type="submit" value="Submit rating" />
+</form>
+{{/if}}
