change category form action post request

--- a/views/admin-category-form.handlebars
+++ b/views/admin-category-form.handlebars
@@ -1,6 +1,6 @@
 {{> admin/dashboard-navigation }}
 <h2>Add Category</h2>
-<form action="/admin/add-category" method="post">
+<form action="/admin/category/add-new" method="post">
 	<div class="form-settings">
 		<p><span>Category Title</span><input type="text" name="title" /></p>
 		<br />
