--- a/views/admin-articles-view.handlebars
+++ b/views/admin-articles-view.handlebars
@@ -12,6 +12,7 @@
     <th>Approve</th>
     <th>Pinned</th>
     <th>Pin</th>
+    <th>Delete</th>
   </tr>
   {{#each articles}}
   <tr>
@@ -46,6 +47,12 @@
         <input class="submit" type="submit" value="Pin" />
       </form>
       {{/if}}
+    </td>
+    <td>
+      <form method="post" action="/admin/news/delete">
+        <input type="hidden" name="article_id" value="{{ this.id }}" />
+        <input class="submit" type="submit" value="Delete" />
+      </form>
     </td>
   </tr>
   {{/each}}
