--- a/views/user-articles-list.handlebars
+++ b/views/user-articles-list.handlebars
@@ -7,7 +7,11 @@
       <td><img src="/article_images/{{this.image}}" alt="Article Image" width="50" height="40"></td>
       <td><a href="/news/article/{{this.id}}">{{this.title}}</a></td>
       <td><a href="/news/article/{{this.id}}/edit">Edit</a></td>
-      <td><a href="/news/article/{{this.id}}/delete">delete</a></td>
+      <td>
+        <form method="post" action="/news/article/{{this.id}}/delete">
+          <input class="submit" type="submit" value="Delete" />
+        </form>
+      </td>
     </tr>
   </tbody>
 </table>
